adding full swagger example

--- a/SwaggerAndAutoresetExample/src/ConsumingWebsite/ConsumingWebsite.csproj
+++ b/SwaggerAndAutoresetExample/src/ConsumingWebsite/ConsumingWebsite.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.StaticFiles" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="1.1.1" />
+    <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.7" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
