--- a/SwaggerAndAutoresetExample/src/ConsumingWebsite/package.json
+++ b/SwaggerAndAutoresetExample/src/ConsumingWebsite/package.json
@@ -2,9 +2,9 @@
   "name": "website",
   "description": "Used for generation of AutoRest client only",
   "scripts": {
-    "generate": "autorest -n ConsumingWebsite.DataServiceClient -i http://localhost:5200/swagger/v1/swagger.json -o DataServiceClient"
+    "generate": "autorest -n ConsumingWebsite.Clients.DataService -i http://localhost:5200/swagger/doc/swagger.json -o Clients.DataService"
   },
   "devDependencies": {
-    "autorest": "^0.13.1"
+    "autorest": "^0.13.2"
   }
 }
