testing linking xml docs to swagger gen from a shared/other project

--- a/SwaggerAndAutorestExample/src/DataService/DataService.csproj
+++ b/SwaggerAndAutorestExample/src/DataService/DataService.csproj
@@ -23,4 +23,7 @@
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="1.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataService.Shared\DataService.Shared.csproj" />
+  </ItemGroup>
 </Project>
