Fix xml docs file generation and code to have swagger pick it up. Updated autorest cli usage according to changes in the latest 1.x version of autorest cli.

--- a/SwaggerAndAutorestExample/src/ConsumingWebsite/package.json
+++ b/SwaggerAndAutorestExample/src/ConsumingWebsite/package.json
@@ -2,7 +2,7 @@
   "name": "website",
   "description": "Used for generation of AutoRest client only",
   "scripts": {
-    "generate": "autorest -n ConsumingWebsite.Clients.DataService -i http://localhost:5200/swagger/doc/swagger.json -o Clients.DataService"
+    "generate": "autorest --namespace=ConsumingWebsite.Clients.DataService --input-file=http://localhost:5200/swagger/doc/swagger.json --output-folder=Clients.DataService --csharp"
   },
   "devDependencies": {
     "autorest": "^1.1.0"
